@@ -80,3 +80,4 @@ v2.1:
   - added option-check for alias-definition
 - class PropertyReader belongs now to namespace utils
 - introduced namespace exc for Exception
+- added namespace test with classes: TestUnit, TestCaseBase, TestCase 
